fix: resolve 401/403 auth issues, fix CORS for Vercel, and sanitize profile update payload